--- a/Barcodegenerator/Barcodegenerator.csproj
+++ b/Barcodegenerator/Barcodegenerator.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="NetBarcode" Version="1.4.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    <PackageReference Include="ZXing.Net" Version="0.16.6" />
   </ItemGroup>
 
 </Project>
